[gd_scene load_steps=6 format=3 uid="uid://5e1lv8cli7ru"]

[ext_resource type="Script" path="res://Characters/snail.gd" id="1_71gg0"]
[ext_resource type="Texture2D" uid="uid://co71yqh57of3s" path="res://GameAssets/Snail.png" id="1_dp76j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_och6v"]
size = Vector2(10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_q1kkd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dp76j")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tcndc"]
radius = 8.0

[node name="snail" type="StaticBody2D"]
position = Vector2(0, -5)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_71gg0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_och6v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q1kkd")
animation = &"Run"

[node name="HurtBox" type="Area2D" parent="." groups=["Enemy"]]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_tcndc")

[node name="HitBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_tcndc")

[node name="Knockback_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Indestrukteble_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_enemy_hit_box_area_entered"]
[connection signal="timeout" from="Knockback_timer" to="." method="_on_korvtimer_timeout"]
[connection signal="timeout" from="Indestrukteble_timer" to="." method="_on_indestrukteble_timer_timeout"]
